test/types/coerce/bradc/int2uint.good
int2uint.chpl:6: error: Cannot assign to uint(64) from int(64)
